--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
+    "bootstrap": "^5.1.3",
     "react": "^18.0.0",
     "react-bootstrap": "^2.3.1",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.3.1",
     "react-redux": "^8.0.1",
     "redux-thunk": "^2.4.1",
     "sass": "^1.51.0"
